tests/fixtures/valid/crazy/builtins/str.py
# Valid str() calls
# Auto-generated by scripts/generate_tests.py

b0_str_int = str(1)
b1_str_float = str(1.0)
b2_str_bool = str(True)
b3_str_str = str("hello")
b4_str_bytes = str(b"hello")
b5_str_list = str([1, 2, 3])
b6_str_dict = str({"a": 1})
b7_str_set = str({1, 2, 3})
b8_str_none = str(None)

print("str() tests passed!")
