tests/fixtures/invalid/pow_list_bool_dict.py
# Cannot call pow() with List[int], Bool, Dict[str, int]
x = pow([1, 2, 3], True, {"a": 1})
